--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.Task-table table, th, td {
+  border: 1px solid black;
+}
+
+.Task-status {
+  display: block;
+}
